# venture

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
doc/adr/: 0001-record-architecture-decisions.md  0002-choose-gitpython-for-git-repository-management.md
src/venture/: __init__.py  cli.py
src/venture.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
venture/: __init__.py  cli.py  completion.py
