[tool.poetry]
name = "venture"
version = "0.0.0"
description = ""
authors = ["Greg Trahair <greg.trahair@gmail.com>"]
readme = "README.md"

[tool.poetry.plugins."version"]
poetry_dynamic_versioning = "true"

[tool.poetry.dependencies]
python = "^3.11"
poetry = "^2.1.2"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
venture = "venture.cli:main"

[tool.poetry.group.dev.dependencies]
adr-tools-python = "^1.0.3"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }
